Fix : WebRTC 에러 수정

--- a/[FE]프론트/my-app/src/component/VideoRoomComponent.css
+++ b/[FE]프론트/my-app/src/component/VideoRoomComponent.css
@@ -9,38 +9,40 @@
   min-width: 400px !important;
 }
 
-.toolbar {
+.toolbar{
   min-height: 40px !important;
+
 }
 
-#titleContent {
+#titleContent{
   max-width: 100px;
-  /* background-color: #494949; */
-  margin: 5px 0;
+  background-color: #494949;
+  margin: 5px -18px;
   padding: 0px 15px;
-  font-size: 20px;
+  font-size: 16px;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
-.buttonsContent {
-  height: 40px !important;
-  text-align: center;
-  margin: auto;
-  min-width: 400px;
+.buttonsContent{
+	height: 40px !important;
+	text-align: center;
+	margin: auto;
+    min-width: 400px;
 }
-.navButton {
-  height: 40px !important;
-  width: 40px !important;
+.navButton{
+	height: 40px !important;
+	width : 40px !important;
 }
 
-#navChatButton {
+#navChatButton{
   position: absolute;
   right: 0;
 }
 .stream-container {
-  padding: 0;
+    padding: 0;
 }
+
 
 .bounds {
   background-color: #494949;
@@ -55,13 +57,14 @@
   width: inherit;
 }
 
+
 /*!
  * Copyright (c) 2017 TokBox, Inc.
  * Released under the MIT license
  * http://opensource.org/licenses/MIT
  */
 
-.custom-class {
+ .custom-class {
   min-height: 0px !important;
 }
 
@@ -99,7 +102,7 @@
   margin-left: auto;
 
   color: #fff;
-  font-family: "Didact Gothic", sans-serif;
+  font-family: 'Didact Gothic', sans-serif;
   font-size: 13px;
   line-height: 1.4;
 }
@@ -258,9 +261,9 @@
 .OT_subscriber {
   position: relative;
   min-width: 48px;
-  min-height: 48px;
-  width: 100%;
-  height: 100%;
+	min-height: 48px;
+	width: 100%;
+	height: 100%;
 }
 
 .OT_publisher .OT_video-element,
@@ -700,7 +703,7 @@
 
 .OT_audio-level-meter:before {
   /* makes the height of the container equals its width */
-  content: "";
+  content: '';
   display: block;
   padding-top: 100%;
 }
@@ -730,7 +733,7 @@
 
 .OT_audio-level-meter__audio-only-img:before {
   /* makes the height of the container equals its width */
-  content: "";
+  content: '';
   display: block;
   padding-top: 100%;
 }
@@ -738,11 +741,7 @@
 .OT_audio-level-meter__value {
   position: absolute;
   border-radius: 50%;
-  background-image: radial-gradient(
-    circle,
-    rgba(151, 206, 0, 1) 0%,
-    rgba(151, 206, 0, 0) 100%
-  );
+  background-image: radial-gradient(circle, rgba(151, 206, 0, 1) 0%, rgba(151, 206, 0, 0) 100%);
 }
 
 .OT_audio-level-meter.OT_mode-off {
@@ -869,7 +868,7 @@
 
 .OT_video-unsupported-img:before {
   /* makes the height of the container 93% of its width (90/97 px) */
-  content: "";
+  content: '';
   display: block;
   padding-top: 93%;
 }
@@ -888,3 +887,4 @@
   height: 100%;
   margin-top: 40px;
 }
+  
