--- a/[FE]프론트/my-app/src/component/profile/FeedDetailModal.css
+++ b/[FE]프론트/my-app/src/component/profile/FeedDetailModal.css
@@ -10,7 +10,7 @@
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-.FeedModifyModal {
+.FeedDetailModal {
   background-color: #2c2f33;
   color: #ffffff;
   padding: 20px;
@@ -20,7 +20,7 @@
   max-width: 300px;
 }
 
-.FeedModifyModal textarea {
+.FeedDetailModal textarea {
   display: block;
   width: 100%;
   padding: 10px;
@@ -33,7 +33,7 @@
   max-height: 300px;
 }
 
-.FeedModifyModal input[type="file"] {
+.FeedDetailModal input[type="file"] {
   display: none;
 }
 
@@ -49,7 +49,7 @@
   text-align: center;
 }
 
-.FeedModifyModal button {
+.FeedDetailModal button {
   background-color: #7289da;
   border: none;
   padding: 8px 12px;
@@ -61,6 +61,6 @@
   transition: background-color 0.2s;
 }
 
-.FeedModifyModal button:hover {
+.FeedDetailModal button:hover {
   background-color: #5e81ac;
 }
